[package]
name = "cardano_price_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
oura = "1.7"
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
pallas = "0.13.2"
hex = "0.4.3"