[workspace]
members = [".", "migration"]

[package]
name = "cardano_price_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
oura = "1.7"
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
hex = "0.4.3"
pallas = "0.13.2"
sea-orm = { version = "0.9.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
rust_decimal = "0.7.1"
bech32 = "0.9.1"
hyper = { version = "0.14.20", features = ["tcp", "server", "http1"] }
serde_json = "1.0.86"
