[workspace]
members = [".", "migration"]

[package]
name = "wtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
oura = "1.7"
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
clap = { version = "4.0.9", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
hex = "0.4.3"
pallas = "0.13.2"
sea-orm = { git = "https://github.com/dcSpark/sea-orm", branch = "insert-many-returning", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
rust_decimal = "0.7.1"
bech32 = "0.9.1"
hyper = { version = "0.14.20", features = ["tcp", "server", "http1"] }
serde_json = "1.0.86"
tokio-tungstenite = "0.17.2"
futures = "0.3.24"
headers = "0.3.8"
async-trait = "0.1.58"